[project]
name = "low-rank-transformers"
version = "0.0.0"
description = "Code implementation of the work 'Treinamento Eficiente de Transformers' (2025) and further experiments."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch==2.11.0",
    "numpy==2.4.4",
    "accelerate==1.13.0",
    "datasets==4.8.4",
    "evaluate==0.4.6",
    "tokenizers==0.22.2",
    "transformers[torch]==5.5.0",
]
